# Maitta

./: README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json  devcontainer.vim.json
.github/workflows/: release.yaml
doc/: DEVELOPMENT.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: .env.template  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-07-31-052732_v0.0.1/: down.sql  up.sql
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs
src/commons/: ConfirmDialog.tsx  Header.tsx
src/functions/displayMode/: MaterialUISwitch.ts
src/functions/task/: TaskCreateDialog.tsx  TaskEditDialog.tsx  TaskHistory.tsx  TaskHistoryItem.tsx  TaskInfo.tsx  TaskInfoViewer.tsx
src/pages/: Home.tsx  TaskDetail.tsx
src/services/: MockService.ts  Services.ts  TauriService.ts
