[package]
name = "maitta"
version = "1.0.0"
description = "`Mae itsu yatta?` management application."
authors = ["mikoto2000"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maitta_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.2", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-store = "2.0.0-beta"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
tauri-plugin-window-state = "2.0.0-beta"

